# depdiscover

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  NOTICE  README.md  action.yml  conanfile.txt  create_appimage_modern.sh  depdiscover.json  depdiscover_schema.json  schema_example.json  suppressions.json  vcpkg.json  visualize_deps.py
.github/workflows/: depdiscover.yml  quality_security.yml  update-major-tag.yml
cmake/: DepGuardConfig.cmake.in
configure/: rz_config.hpp.in
data/: 2026-04-06_Linux_CycloneDx.json  2026-04-06_Linux_depdiscover.html  2026-04-06_Linux_depdiscover.json  2026-04-06_Linux_gh-libs.csv  2026-04-06_Linux_gh-libs.json
data/reports/: 2026-04-06_Linux_CycloneDx.json  2026-04-06_Linux_depdiscover.html  2026-04-06_Linux_depdiscover.json  2026-04-08_Linux_CycloneDx.json  2026-04-08_Linux_depdiscover.html  2026-04-08_Linux_depdiscover.json  2026-04-08_Linux_depdiscover.md  2026-04-15_Linux_CycloneDx.json  2026-04-15_Linux_depdiscover.html  2026-04-15_Linux_depdiscover.json  2026-04-15_Linux_depdiscover.md  2026-04-18_Linux_CycloneDx.json  2026-04-18_Linux_depdiscover.html  2026-04-18_Linux_depdiscover.md  2026-04-18_Linux_gh-libs.csv  2026-04-18_Linux_gh-libs.json
docs/: example_report.html  example_report_v2.html  example_sbom-cyclonedx.json  github_action_usage.md  gitlab_action_usage.md  index.md  notes.md  readme.md
docs/architecture/: architecture.md  class_diagram.mmd  component_diagram.mmd  readme.md  sequence_diagram.mmd
docs/source_docu/: README.md
docs/source_docu/include/: check_gh-update.hpp.md  cmake_fetch_parser.hpp.md  cmake_libs_parser.hpp.md  compile_commands.hpp.md  conan_parser.hpp.md  cve_resolver.hpp.md  cyclonedx_generator.hpp.md  elf_scanner.hpp.md  header_resolver.hpp.md  html_generator.hpp.md  include_scanner.hpp.md  license_resolver.hpp.md  markdown_generator.hpp.md  pkg_config.hpp.md  rz_config.hpp.md  semver.hpp.md  types.hpp.md  vcpkg_parser.hpp.md
docs/source_docu/src/: main.cpp.md
include/: check_gh-update.hpp  cmake_fetch_parser.hpp  cmake_libs_parser.hpp  compile_commands.hpp  conan_parser.hpp  cve_resolver.hpp  cyclonedx_generator.hpp  elf_scanner.hpp  elf_scanner.hpp_popen  header_resolver.hpp  html_generator.hpp  include_scanner.hpp  license_resolver.hpp  markdown_generator.hpp  pkg_config.hpp  pkg‑config_parser.hpp  rz_config.hpp  semver.hpp  types.hpp  vcpkg_parser.hpp
resources/: depdiscover.desktop
src/: main.cpp
